crates/openracing-diagnostic/tests/snapshots/snapshot_tests__frame_data_snapshots__default_frame.snap
---
source: crates/openracing-diagnostic/tests/snapshot_tests.rs
expression: "FrameData::default()"
---
FrameData {
    ffb_in: 0.0,
    torque_out: 0.0,
    wheel_speed: 0.0,
    hands_off: false,
    ts_mono_ns: 0,
    seq: 0,
}
